--- a/_layouts/project.swaggered.html
+++ b/_layouts/project.swaggered.html
@@ -64,7 +64,7 @@
 	
 	 <!-- Page Content -->
 	<a name="features"></a>	
-	{% for post in site.categories['apispots/swaggered'] reversed %} 
+	{% for post in site.categories['projects/swaggered'] reversed %} 
 		
 		{% assign loopindex = forloop.index | modulo: 2 %}
 		
