Added APIs Guru in the example links

--- a/_layouts/project.swaggered.html
+++ b/_layouts/project.swaggered.html
@@ -128,8 +128,9 @@
             <p>
               If you need some real life API specs to have a go with the extension,
               have a look at the fantastic <a href="http://theapistack.com/" target="_blank">API Stack</a> catalogue by
-              the <a href="http://apievangelist.com/" target="_blank">API Evangelist</a> (Kin Lane). Almost all the registered APIs
-              have an OpenAPI spec that you can open and visualize using the add-on.
+              the <a href="http://apievangelist.com/" target="_blank">API Evangelist</a> (Kin Lane) or the
+              <a href="https://apis-guru.github.io/" target="_blank">APIs Guru</a> directory. All registered APIs
+              come with an OpenAPI spec that you can open and visualize using the add-on.
             </p>
         </div>
     </div>
