--- a/_layouts/project.swaggered.html
+++ b/_layouts/project.swaggered.html
@@ -70,7 +70,7 @@
             <h2>A Chrome extension for APIs visualization</h2>
             <p>
                 <b>swagger.ed</b> is a simple Chrome browser extension that displays a visual representation of an API modelled using the
-                <a href='https://github.com/OAI/OpenAPI-Specification' target="_blank">OpenAPI</a> spec (aka <a href='http://swagger.io/' target="_blank">Swagger</a>). Simply add the extension on your browser directly from the
+                <a href='https://github.com/OAI/OpenAPI-Specification' target="_blank">OpenAPI</a> spec (fka <a href='http://swagger.io/' target="_blank">Swagger</a>). Simply add the extension on your browser directly from the
                 <a href="https://chrome.google.com/webstore/detail/swaggered/kaggdmjacnelneophkagkdljffninnpd" target="_blank">Web Store</a> and visualize API definitions directly from the raw JSON / YAML format.
             </p>
         </div>
