--- a/_layouts/project.bdd.html
+++ b/_layouts/project.bdd.html
@@ -45,7 +45,7 @@
 			            <li class="divider"></li>
 			          </ul>
 			        </li>
-			        
+
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
 					<li><a href="{{site.url}}">The API Spots</a></li>
@@ -53,7 +53,7 @@
 			</nav>
 		</div>
 	</header>
-	
+
 	{% if page.landing %}
 	<main class="bs-docs-masthead" id="content" role="main" tabindex="-1">
 		<div class="container">
@@ -63,15 +63,15 @@
 			<p class="lead">
 					<a href="{{ site.url }}/projects/bdd/getting-started"
 						class="btn btn-outline-inverse btn-lg">Get Started</a>
-		    </p>	
-					
+		    </p>
+
 		</div>
 	</main>
-	
+
 	{{content}}
-	
+
 	{% else %}
-	
+
 	<div class="bs-docs-header" id="content" tabindex="-1">
       <div class="container">
         <h1>{{page.headline}}</h1>
@@ -80,7 +80,7 @@
     </div>
 
 	<div class='container bs-docs-container'>
-		
+
 	{{content}}
 
 	</div>
@@ -93,42 +93,42 @@
 			<div class="bs-docs-social">
 				<ul class="bs-docs-social-buttons">
 					<li><iframe class="github-btn"
-							src="http://ghbtns.com/github-btn.html?user=chefArchitect&amp;repo=apispots-testing-bdd&amp;type=watch&amp;count=true"
+							src="http://ghbtns.com/github-btn.html?user=spilio&amp;repo=apispots-testing-bdd&amp;type=watch&amp;count=true"
 							width="100" height="20" title="Star on GitHub"></iframe></li>
 					<li><iframe class="github-btn"
-							src="http://ghbtns.com/github-btn.html?user=chefArchitect&amp;repo=apispots-testing-bdd&amp;type=fork&amp;count=true"
+							src="http://ghbtns.com/github-btn.html?user=spilio&amp;repo=apispots-testing-bdd&amp;type=fork&amp;count=true"
 							width="102" height="20" title="Fork on GitHub"></iframe></li>
 					<li>
-						<a href="https://twitter.com/chefArchitect" class="twitter-follow-button" data-show-count="true">Follow @chefArchitect</a>
+						<a href="https://twitter.com/spilio" class="twitter-follow-button" data-show-count="true">Follow @spilio</a>
 						<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
 					</li>
-					
+
 				</ul>
 			</div>
 
 
 			<p>
 				Designed and built by the <a
-					href="https://twitter.com/chefArchitect" target="_blank">@chefArchitect</a>
-			
+					href="https://twitter.com/spilio" target="_blank">@spilio</a>
+
 			</p>
-			
+
 			<div class="social-icons">
 				{% if site.owner.twitter %}<a href="http://twitter.com/{{ site.owner.twitter }}" title="{{ site.owner.name}} on Twitter" target="_blank"><i class="fa fa-twitter-square fa-2x"></i></a>{% endif %}
 				{% if site.owner.linkedin %}<a href="http://linkedin.com/in/{{ site.owner.linkedin }}" title="{{ site.owner.name}} on LinkedIn" target="_blank"><i class="fa fa-linkedin-square fa-2x"></i></a>{% endif %}
 				{% if site.owner.github %}<a href="{{ site.owner.github }}" title="{{ site.owner.name}} on Github" target="_blank"><i class="fa fa-github-square fa-2x"></i></a>{% endif %}
 			  <a href="{{ site.url }}/feed.xml" title="Atom/RSS feed"><i class="fa fa-rss-square fa-2x"></i></a>
 			</div>
-			
+
 			<span>Special thanks to </span>
 			<ul class="list-inline">
-			  <li class="footer-menu-divider">⋅</li>	
+			  <li class="footer-menu-divider">⋅</li>
 			{% for credit in site.data.credits.bdd %}
 			  <li><a href="{{ credit.url }}" target='_blank'>{{ credit.name }}</a></li>
 			  <li class="footer-menu-divider">⋅</li>
 			{% endfor %}
 			</ul>
-			
+
 			<p>
 				Code licensed under <a rel="license"
 					href="https://github.com/twbs/bootstrap/blob/master/LICENSE"
@@ -136,17 +136,17 @@
 					href="https://creativecommons.org/licenses/by/3.0/" target="_blank">CC
 					BY 3.0</a>.
 			</p>
-			
+
 			<ul class="bs-docs-footer-links text-muted">
 				<li>Currently v0.0.1</li>
 				<li>·</li>
-				<li><a href="https://github.com/chefArchitect/apispots-testing-bdd">GitHub</a></li>
+				<li><a href="https://github.com/spilio/apispots-testing-bdd">GitHub</a></li>
 				<li>·</li>
 				<li>Powered by the <a href="{{site.url}}">API Spots</a></li>
 			</ul>
-			
 
-			
+
+
 		</div>
 	</footer>
 
@@ -161,10 +161,10 @@
 	<!-- highlight.js -->
 	<script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.6/highlight.min.js"></script>
 	<script>hljs.initHighlightingOnLoad();</script>
-	
-	
+
+
 	{% include ga.html %}
-	
+
 </body>
 
 </html>
