--- a/_layouts/project.swaggered.html
+++ b/_layouts/project.swaggered.html
@@ -52,7 +52,7 @@
                         <hr class="intro-divider">
                         <ul class="list-inline intro-social-buttons">
                             <li>
-                                <a href="https://github.com/chefArchitect/swagger.ed" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
+                                <a href="https://github.com/spilio/swagger.ed" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
                             </li>
                         </ul>
                     </div>
@@ -142,7 +142,7 @@
                 <div class="col-lg-12">
 
                     <p>
-                        Designed and built by the <a href="https://twitter.com/chefArchitect" target="_blank">@chefArchitect</a>
+                        Designed and built by <a href="https://twitter.com/spilio" target="_blank">@spilio</a>
                     </p>
 
                     <div class="social-icons">
