--- a/_layouts/project.bdd.html
+++ b/_layouts/project.bdd.html
@@ -93,10 +93,10 @@
 			<div class="bs-docs-social">
 				<ul class="bs-docs-social-buttons">
 					<li><iframe class="github-btn"
-							src="http://ghbtns.com/github-btn.html?user=spilio&amp;repo=apispots-testing-bdd&amp;type=watch&amp;count=true"
+							src="//ghbtns.com/github-btn.html?user=spilio&amp;repo=apispots-testing-bdd&amp;type=watch&amp;count=true"
 							width="100" height="20" title="Star on GitHub"></iframe></li>
 					<li><iframe class="github-btn"
-							src="http://ghbtns.com/github-btn.html?user=spilio&amp;repo=apispots-testing-bdd&amp;type=fork&amp;count=true"
+							src="//ghbtns.com/github-btn.html?user=spilio&amp;repo=apispots-testing-bdd&amp;type=fork&amp;count=true"
 							width="102" height="20" title="Fork on GitHub"></iframe></li>
 					<li>
 						<a href="https://twitter.com/spilio" class="twitter-follow-button" data-show-count="true">Follow @spilio</a>
@@ -114,8 +114,8 @@
 			</p>
 
 			<div class="social-icons">
-				{% if site.owner.twitter %}<a href="http://twitter.com/{{ site.owner.twitter }}" title="{{ site.owner.name}} on Twitter" target="_blank"><i class="fa fa-twitter-square fa-2x"></i></a>{% endif %}
-				{% if site.owner.linkedin %}<a href="http://linkedin.com/in/{{ site.owner.linkedin }}" title="{{ site.owner.name}} on LinkedIn" target="_blank"><i class="fa fa-linkedin-square fa-2x"></i></a>{% endif %}
+				{% if site.owner.twitter %}<a href="//twitter.com/{{ site.owner.twitter }}" title="{{ site.owner.name}} on Twitter" target="_blank"><i class="fa fa-twitter-square fa-2x"></i></a>{% endif %}
+				{% if site.owner.linkedin %}<a href="//linkedin.com/in/{{ site.owner.linkedin }}" title="{{ site.owner.name}} on LinkedIn" target="_blank"><i class="fa fa-linkedin-square fa-2x"></i></a>{% endif %}
 				{% if site.owner.github %}<a href="{{ site.owner.github }}" title="{{ site.owner.name}} on Github" target="_blank"><i class="fa fa-github-square fa-2x"></i></a>{% endif %}
 			  <a href="{{ site.url }}/feed.xml" title="Atom/RSS feed"><i class="fa fa-rss-square fa-2x"></i></a>
 			</div>
