--- a/_layouts/apispots.html
+++ b/_layouts/apispots.html
@@ -29,10 +29,7 @@
                         <a class="page-scroll" href="#about">About</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#manifest">Manifest</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#projects">Projects</a>
+                        <a class="page-scroll" href="#manifest">Dowlnoad</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
@@ -62,22 +59,6 @@
         </div>
     </header>
 
-    <section class="bg-primary" id="about">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">We've got what you need!</h2>
-                    <hr class="light">
-                    <p class="text-faded">
-                    	API Spots is a collection of tools that are being designed for
-                    	humans - doesn't matter if you code or not.  Everybody should
-                    	be able to understand and use APIs.
-                    </p>
-                    <a href="#manifest" class="page-scroll btn btn-default btn-xl">Get Started!</a>
-                </div>
-            </div>
-        </div>
-    </section>
 
     <section id="manifest">
         <div class="container">
@@ -101,77 +82,35 @@
                     <div class="service-box">
                         <i class="fa fa-4x fa-plug wow bounceIn text-primary" data-wow-delay=".1s"></i>
                         <h3>Plug and Play</h3>
-                        <p class="text-muted">No coding skills necessary. Download and use directly.</p>
+                        <p class="text-muted">No coding skills necessary. Download and start using.</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-newspaper-o wow bounceIn text-primary" data-wow-delay=".2s"></i>
                         <h3>Up to Date</h3>
-                        <p class="text-muted">Technology is changing and so will you.</p>
+                        <p class="text-muted">Stay up to date with technology updates.</p>
                     </div>
                 </div>
             </div>
         </div>
     </section>
 
-    <section class="no-padding" id="projects">
-    	<div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">The Tools</h2>
-                    <hr class="primary">
-                </div>
-            </div>
-        </div>
-        <div class="container-fluid">
-            <div class="row no-gutter">
-                <div class="col-lg-4 col-sm-6">
-                    <a href="{{ site.url }}/projects/swaggered" class="portfolio-box">
-                        <img src="{{ site.url }}/images/apispots/swagger-graph1.png"  class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Browser Add-ons
-                                </div>
-                                <div class="project-name">
-                                    swagger.ed
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <a href="{{ site.url }}/projects/bdd" class="portfolio-box">
-                        <img src="{{ site.url }}/images/apispots/bdd-cycle.png" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Microservices
-                                </div>
-                                <div class="project-name">
-                                    BDD API Testing for Humans
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <a href="#" class="portfolio-box">
-                        <img src="https://unsplash.it/650/350?image=532" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Soon to come
-                                </div>
-                                <div class="project-name">
-                                    Stay tuned...
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
 
+
+    <section class="bg-primary" id="about">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2 text-center">
+                    <h2 class="section-heading">We've got what you need!</h2>
+                    <hr class="light">
+                    <p class="text-faded">
+                    	API Spots is a collection of tools designed for the non-tech
+                    	user - doesn't matter if you code or not.  Everybody should
+                    	be able to understand and use APIs.
+                    </p>
+                    <a href="#manifest" class="page-scroll btn btn-default btn-xl">Download the extension now</a>
+                </div>
             </div>
         </div>
     </section>
@@ -184,13 +123,16 @@
                     <h2 class="section-heading">Let's Get In Touch!</h2>
                     <hr class="primary">
 
-                    <p>
-						Designed and built by <a
-							href="https://github.com/spilio" target="_blank">@spilio</a>
 
-						<a href="https://twitter.com/chrisspilio" class="twitter-follow-button" data-show-count="true">Follow @chrisspilio</a>
-						<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
-					</p>
+           <div>
+             <a href="https://twitter.com/apispots" class="twitter-follow-button" data-show-count="true">Follow @apispots</a>
+ 						<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+           </div>
+
+           <p>
+             Crafted by <a href="https://github.com/spilio" target="_blank">Chris Spiliotopoulos</a>
+            </p>
+
 
 					<div class="social-icons">
 						{% if site.owner.twitter %}<a href="http://twitter.com/{{ site.owner.twitter }}" title="{{ site.owner.name}} on Twitter" target="_blank"><i class="fa fa-twitter-square fa-2x"></i></a>{% endif %}
@@ -198,15 +140,6 @@
 						{% if site.owner.github %}<a href="{{ site.owner.github }}" title="{{ site.owner.name}} on Github" target="_blank"><i class="fa fa-github-square fa-2x"></i></a>{% endif %}
 					  <a href="{{ site.url }}/feed.xml" title="Atom/RSS feed"><i class="fa fa-rss-square fa-2x"></i></a>
 					</div>
-
-					<span>Special thanks to </span>
-					<ul class="list-inline">
-					  <li class="footer-menu-divider">⋅</li>
-					{% for credit in site.data.credits.apispots %}
-					  <li><a href="{{ credit.url }}" target='_blank'>{{ credit.name }}</a></li>
-					  <li class="footer-menu-divider">⋅</li>
-					{% endfor %}
-					</ul>
 
 
                 </div>
