--- a/_includes/home/menu-following.html
+++ b/_includes/home/menu-following.html
@@ -1,6 +1,5 @@
 <div class="ui large top fixed hidden menu">
   <div class="ui container">
-    <a class="active item" href="/">API Spots</a>
-    <a class="item" href="/">Open APIs</a>
+    {% include home/menu.html %}
   </div>
 </div>
