--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,9 +1,8 @@
 <html>
 
 <head>
-  <title>API Spots</title>
 
-  <link rel="stylesheet" type="text/css" href="../dist/styles.css">
+  {% include head.html %}
 
 </head>
 
@@ -18,7 +17,7 @@
 
     {% include home/header-master.html %}
 
-    {% include home/section-features.html %}
+    {% include home/section-manifest.html %}
 
     <div class="ui black inverted vertical footer segment">
       {% include common/footer.html %}
