--- a/_includes/home/menu-pointing.html
+++ b/_includes/home/menu-pointing.html
@@ -3,7 +3,6 @@
     <a class="toc item">
       <i class="sidebar icon"></i>
     </a>
-    <a class="active item" href="/">API Spots</a>
-    <a class="item" href="/">Open APIs</a>
+    {% include home/menu.html %}
   </div>
 </div>
