Added production Webpack config

--- a/_includes/common/footer.html
+++ b/_includes/common/footer.html
@@ -1,3 +1,4 @@
+
 <div class="ui inverted vertical footer segment">
   <div class="ui container">
     <div class="ui stackable inverted divided equal height stackable grid">
@@ -6,6 +7,12 @@
         <div class="ui inverted link list">
           <a href="https://www.linkedin.com/in/spilio" target="_blank" class="item">Author</a>
           <a href="mailto:chrysanthos.spiliotopoulos@gmail.com" target="_blank" class="item">Contact</a>
+        </div>
+      </div>
+      <div class="three wide column">
+        <h4 class="ui inverted header">Locations</h4>
+        <div class="ui inverted link list">
+          <a href="https://apispots.github.io" target="_blank" class="item">Website</a>
           <a href="https://github.com/apispots" target="_blank" class="item">Github</a>
           <a href="https://twitter.com/apispots" target="_blank" class="item">Twitter</a>
         </div>
@@ -13,6 +20,10 @@
       <div class="seven wide column">
         <h4 class="ui inverted header">The API Spots &copy; 2017</h4>
         <p>APIs for Humans</p>
+        <div class="ui inverted link list">
+          <!-- Place this tag where you want the button to render. -->
+          <a class="github-button" href="https://github.com/apispots/apispots-extension" data-icon="octicon-star" data-show-count="true" aria-label="Star API Spots on GitHub">Star</a>
+        </div>
       </div>
     </div>
   </div>
