--- a/_includes/docs/menu.html
+++ b/_includes/docs/menu.html
@@ -4,13 +4,13 @@
   </a>
   <a href="/"><b>API Spots</b></a>
 </div>
-<a href='/' class="item">
-  <b>Getting started</b>
+<a href='{{site.extension.download-url}}' target="_blank" class="item">
+  <b>Download</b>
 </a>
 <div class="item">
-  <div class="header">Validate</div>
+  <div class="header">Open APIs</div>
   <div class="menu">
-    <a class="item" href="/validators/resources">HSDS Resources</a>
-    <a class="item" href="/validators/datapackage">Datapackages</a>
+    <a class="item" href="/docs/openapis/definitions">Definitions</a>
+    <a class="item" href="/docs/openapis/catalogs">Catalogs</a>
   </div>
 </div>
