--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,3 +5,7 @@
 
 <link rel="shortcut icon" type="image/png" href="{{site.url}}/favicon.png"/>
 <link rel="shortcut icon" type="image/png" href="{{site.url}}/favicon.png"/>
+
+
+<!-- Place this tag in your head or just before your close body tag. -->
+<script async defer src="https://buttons.github.io/buttons.js"></script>
