--- a/_includes/home/header-master.html
+++ b/_includes/home/header-master.html
@@ -7,10 +7,10 @@
       The API Spots
     </h1>
     <h2>APIs for Humans</h2>
-    <a href="/introduction/getting-started.html" class="ui huge inverted download button">
-        Download Chrome Extension
+    <a href="{{site.extension.download-url}}" target="_blank" class="ui huge inverted download button">
+      <i class="download icon"></i>  Download
     </a>
-    <a href="/introduction/new.html" class="ui huge inverted basic button">Read the docs</a>
+    <a href="/docs" class="ui huge inverted basic button">Read the docs</a>
   </div>
 
 </div>
