--- a/_layouts/docs.html
+++ b/_layouts/docs.html
@@ -39,9 +39,9 @@
 
       <div class="article">
 
-        <div class="main intro container wide">
+        <div class="main ui container">
 
-
+          {{content}}
 
         </div>
 
@@ -55,6 +55,7 @@
 
   </div>
 
+  <script src="../dist/home.bundle.js"></script>
 
 </body>
 
