Added documentation for Open APIs.

--- a/_includes/common/footer.html
+++ b/_includes/common/footer.html
@@ -20,9 +20,13 @@
       <div class="seven wide column">
         <h4 class="ui inverted header">The API Spots &copy; 2017</h4>
         <p>APIs for Humans</p>
-        <div class="ui inverted link list">
-          <!-- Place this tag where you want the button to render. -->
-          <a class="github-button" href="https://github.com/apispots/apispots-extension" data-icon="octicon-star" data-show-count="true" aria-label="Star API Spots on GitHub">Star</a>
+        <div class="ui list inverted">
+          <div class="item">
+            <a class="item github-button" href="https://github.com/apispots/apispots-extension" data-icon="octicon-star" data-show-count="true" aria-label="Star API Spots on GitHub">Star</a>
+          </div>
+          <div class="item">
+            <a href="https://twitter.com/apispots" class="item twitter-follow-button" data-show-count="false">Follow @apispots</a><script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+          </div>
         </div>
       </div>
     </div>
