--- a/_includes/docs/menu.html
+++ b/_includes/docs/menu.html
@@ -10,7 +10,8 @@
 <div class="item">
   <div class="header">Open APIs</div>
   <div class="menu">
+    <a class="item" href="/docs/openapis">Introduction</a>
     <a class="item" href="/docs/openapis/definitions">Definitions</a>
-    <a class="item" href="/docs/openapis/catalogs">Catalogs</a>
+    <!-- <a class="item" href="/docs/openapis/catalogs">Catalogs</a> -->
   </div>
 </div>
