--- a/_layouts/docs.html
+++ b/_layouts/docs.html
@@ -55,7 +55,7 @@
 
   </div>
 
-  <script src="../dist/home.bundle.js"></script>
+  <script src="{{site.url}}/dist/docs.bundle.js"></script>
 
 </body>
 
