--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -25,7 +25,7 @@
 
   </div>
 
-  <script src="../dist/home.bundle.js"></script>
+  <script src="{{site.url}}/dist/home.bundle.js"></script>
 </body>
 
 </html>
