Added Definitions and Catalogs docs

--- a/_includes/docs/menu.html
+++ b/_includes/docs/menu.html
@@ -12,6 +12,6 @@
   <div class="menu">
     <a class="item" href="/docs/openapis">Introduction</a>
     <a class="item" href="/docs/openapis/definitions">Definitions</a>
-    <!-- <a class="item" href="/docs/openapis/catalogs">Catalogs</a> -->
+    <a class="item" href="/docs/openapis/catalogs">Catalogs</a>
   </div>
 </div>
