--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,5 +1,5 @@
 <meta charset="utf-8">
-<title>API Spots</title>
+<title>{{page.title}}</title>
 
 <link rel="stylesheet" type="text/css" href="{{site.url}}/dist/styles.css">
 
