Enabled mobile responsiveness and changed TOC

--- a/_includes/common/footer.html
+++ b/_includes/common/footer.html
@@ -1,34 +1,42 @@
-
 <div class="ui inverted vertical footer segment">
   <div class="ui container">
-    <div class="ui stackable inverted divided equal height stackable grid">
-      <div class="three wide column">
-        <h4 class="ui inverted header">About</h4>
-        <div class="ui inverted link list">
-          <a href="https://www.linkedin.com/in/spilio" target="_blank" class="item">Author</a>
-          <a href="mailto:chrysanthos.spiliotopoulos@gmail.com" target="_blank" class="item">Contact</a>
-        </div>
-      </div>
-      <div class="three wide column">
-        <h4 class="ui inverted header">Locations</h4>
-        <div class="ui inverted link list">
-          <a href="https://apispots.github.io" target="_blank" class="item">Website</a>
-          <a href="https://github.com/apispots" target="_blank" class="item">Github</a>
-          <a href="https://twitter.com/apispots" target="_blank" class="item">Twitter</a>
-        </div>
-      </div>
-      <div class="seven wide column">
-        <h4 class="ui inverted header">The API Spots &copy; 2017</h4>
-        <p>APIs for Humans</p>
-        <div class="ui list inverted">
-          <div class="item">
-            <a class="item github-button" href="https://github.com/apispots/apispots-extension" data-icon="octicon-star" data-show-count="true" aria-label="Star API Spots on GitHub">Star</a>
+
+    <div class="ui stackable grid">
+
+      <div class="four column centered row">
+        <div class="column">
+          <h4 class="ui inverted header">About</h4>
+          <div class="ui inverted link list">
+            <a href="https://www.linkedin.com/in/spilio" target="_blank" class="item">Author</a>
+            <a href="mailto:chrysanthos.spiliotopoulos@gmail.com" target="_blank" class="item">Contact</a>
           </div>
-          <div class="item">
-            <a href="https://twitter.com/apispots" class="item twitter-follow-button" data-show-count="false">Follow @apispots</a><script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+        </div>
+        <div class="column">
+          <h4 class="ui inverted header">Locations</h4>
+          <div class="ui inverted link list">
+            <a href="https://apispots.github.io" target="_blank" class="item">Website</a>
+            <a href="https://github.com/apispots" target="_blank" class="item">Github</a>
+            <a href="https://twitter.com/apispots" target="_blank" class="item">Twitter</a>
+          </div>
+        </div>
+        <div class="column">
+          <h4 class="ui inverted header">The API Spots &copy; 2017</h4>
+          <p>APIs for Humans</p>
+          <div class="ui list inverted">
+            <div class="item">
+              <a class="item github-button" href="https://github.com/apispots/apispots-extension" data-icon="octicon-star" data-show-count="true" aria-label="Star API Spots on GitHub">Star</a>
+            </div>
+            <div class="item">
+              <a href="https://twitter.com/apispots" class="item twitter-follow-button" data-show-count="false">Follow @apispots</a>
+              <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+            </div>
           </div>
         </div>
       </div>
     </div>
+
+
+
+
   </div>
 </div>
