--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,10 +1,14 @@
 <meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
+
+
 <title>{{page.title}}</title>
 
 <link rel="stylesheet" type="text/css" href="{{site.url}}/dist/styles.css">
 
 <link rel="shortcut icon" type="image/png" href="{{site.url}}/favicon.png"/>
 <link rel="shortcut icon" type="image/png" href="{{site.url}}/favicon.png"/>
+
 
 
 <!-- Place this tag in your head or just before your close body tag. -->
