--- a/_includes/home/header-master.html
+++ b/_includes/home/header-master.html
@@ -1,13 +1,11 @@
 <div class="ui inverted vertical masthead center aligned segment">
 
-  {% include home/menu-pointing.html %}
-
   <div class="ui text container">
     <h1 class="ui inverted header">
       The API Spots
     </h1>
     <h2>APIs for Humans</h2>
-    <a href="{{site.extension.download-url}}" target="_blank" class="ui huge inverted download button">
+    <a href="{{site.extension.download-url}}" target="_blank" class="ui huge inverted button">
       <i class="download icon"></i>  Download
     </a>
     <a href="/docs" class="ui huge inverted basic button">Read the docs</a>
