--- a/_includes/common/footer.html
+++ b/_includes/common/footer.html
@@ -7,16 +7,17 @@
         <div class="column">
           <h4 class="ui inverted header">About</h4>
           <div class="ui inverted link list">
-            <a href="https://www.linkedin.com/in/spilio" target="_blank" class="item">Author</a>
-            <a href="mailto:chrysanthos.spiliotopoulos@gmail.com" target="_blank" class="item">Contact</a>
+            <a href="https://www.linkedin.com/in/spilio" target="_blank" class="item"><i class="address card outline icon"></i> Author</a>
+            <a href="mailto:chrysanthos.spiliotopoulos@gmail.com" target="_blank" class="item"><i class="mail icon"></i> Contact</a>
           </div>
         </div>
         <div class="column">
           <h4 class="ui inverted header">Locations</h4>
           <div class="ui inverted link list">
-            <a href="https://apispots.github.io" target="_blank" class="item">Website</a>
-            <a href="https://github.com/apispots" target="_blank" class="item">Github</a>
-            <a href="https://twitter.com/apispots" target="_blank" class="item">Twitter</a>
+            <a href="{{site.extension.download-url}}" target="_blank" class="item"><i class="download icon"></i> Download</a>
+            <a href="https://apispots.github.io" target="_blank" class="item"><i class="home icon"></i> Website</a>
+            <a href="https://github.com/apispots" target="_blank" class="item"><i class="github icon"></i> Github</a>
+            <a href="https://twitter.com/apispots" target="_blank" class="item"><i class="twitter icon"></i> Twitter</a>
           </div>
         </div>
         <div class="column">
