--- a/_includes/docs/menu.html
+++ b/_includes/docs/menu.html
@@ -1,17 +1,13 @@
-<div class="item">
-  <a class="ui logo icon image" href="/">
-    <img class="ui image avatar" src="{{site.url}}/favicon.png">
+<div class="ui stackable menu">
+  <a href="{{site.url}}/" class="item">
+    Home
   </a>
-  <a href="/"><b>API Spots</b></a>
-</div>
-<a href='{{site.extension.download-url}}' target="_blank" class="item">
-  <b>Download</b>
-</a>
-<div class="item">
-  <div class="header">Open APIs</div>
-  <div class="menu">
-    <a class="item" href="/docs/openapis">Introduction</a>
-    <a class="item" href="/docs/openapis/definitions">Definitions</a>
-    <a class="item" href="/docs/openapis/catalogs">Catalogs</a>
+  <a href="{{site.url}}/docs" class="item">
+    Docs
+  </a>
+  <div class="right menu">
+    <a href="{{site.extension.download-url}}" target="_blank" class="item">
+      <i class="blue download icon"></i> Download
+    </a>
   </div>
 </div>
