--- a/_layouts/docs.html
+++ b/_layouts/docs.html
@@ -8,14 +8,15 @@
 
 <body>
 
-
   <div class="pusher">
 
     <div class="full height">
 
       <div class="article">
 
-        <div class="main ui container">
+        <div class="ui main container">
+
+          {% include docs/menu.html %}
 
           {{content}}
 
