--- a/_includes/common/footer.html
+++ b/_includes/common/footer.html
@@ -9,6 +9,7 @@
           <div class="ui inverted link list">
             <a href="https://www.linkedin.com/in/spilio" target="_blank" class="item"><i class="address card outline icon"></i> Author</a>
             <a href="mailto:chrysanthos.spiliotopoulos@gmail.com" target="_blank" class="item"><i class="mail icon"></i> Contact</a>
+            <a href="{{site.url}}/faq" class="item"><i class="question icon"></i> FAQ</a>
           </div>
         </div>
         <div class="column">
@@ -26,6 +27,7 @@
           <div class="ui list inverted">
             <div class="item">
               <a class="item github-button" href="https://github.com/apispots/apispots-extension" data-icon="octicon-star" data-show-count="true" aria-label="Star API Spots on GitHub">Star</a>
+              <a class="item github-button" href="https://github.com/apispots/apispots-extension/issues" data-icon="octicon-issue-opened" aria-label="Issue apispots/apispots-extension on GitHub">Issue</a>
             </div>
             <div class="item">
               <a href="https://twitter.com/apispots" class="item twitter-follow-button" data-show-count="false">Follow @apispots</a>
