--- a/_includes/docs/menu.html
+++ b/_includes/docs/menu.html
@@ -5,6 +5,9 @@
   <a href="{{site.url}}/docs" class="item">
     Docs
   </a>
+  <a href="{{site.url}}/faq" class="item">
+    FAQ
+  </a>
   <div class="right menu">
     <a href="{{site.extension.download-url}}" target="_blank" class="item">
       <i class="blue download icon"></i> Download
