Updated email and LinkedIn links

--- a/_includes/common/footer.html
+++ b/_includes/common/footer.html
@@ -7,8 +7,8 @@
         <div class="column">
           <h4 class="ui inverted header">About</h4>
           <div class="ui inverted link list">
-            <a href="https://www.linkedin.com/in/spilio" target="_blank" class="item"><i class="address card outline icon"></i> Author</a>
-            <a href="mailto:chrysanthos.spiliotopoulos@gmail.com" target="_blank" class="item"><i class="mail icon"></i> Contact</a>
+            <a href="{{site.owner.linkedin}}" target="_blank" class="item"><i class="address card outline icon"></i> Author</a>
+            <a href="mailto:{{site.owner.email}}" target="_blank" class="item"><i class="mail icon"></i> Contact</a>
             <a href="{{site.url}}/faq" class="item"><i class="question icon"></i> FAQ</a>
           </div>
         </div>
